# BinaryFileLab

./: CMakeLists.txt  ShipReader.cpp  ShipReader.h  main.cpp
